rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-nested-folders__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Grandparent
  class: Folder
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
  children:
    - referent: referent-1
      name: Parent
      class: Folder
      properties:
        AttributesSerialize:
          BinaryString: ""
        Tags:
          BinaryString: ""
      children:
        - referent: referent-2
          name: Child
          class: Folder
          properties:
            AttributesSerialize:
              BinaryString: ""
            Tags:
              BinaryString: ""
          children: []

