rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-nested-folders__encoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_roundtrip
---
num_types: 1
num_instances: 3
chunks:
  - Inst:
      type_id: 0
      type_name: Folder
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Grandparent
        - Parent
        - Child
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - 0
        - - 2
          - 1
  - End
